# blank-template-project

./: CMakeLists.txt  ReadMe.md  run.sh
assets/: map.txt
src/: game.cpp  game.h  global.h  input.h  main.cpp  physics.h  player.cpp  player.h  sprite.cpp  sprite.h  tile_manager.cpp  tile_manager.h  vector.hpp
src/Engine/: global.h  graphics.cpp  graphics.h  input.cpp  input.h  physics.cpp  physics.h  random.cpp  random.hpp  scene_manager.cpp  scene_manager.h  sound.cpp  sound.h  sprite.cpp  sprite.h  text.cpp  text.h  tile_manager.cpp  tile_manager.h  vector.cpp  vector.hpp
